src/static/styles/hh-styles.css
/* ... */
  #top-nav-bar .navbar-brand {
    margin-top: -16px;
    margin-left: 30px;
  }
  /*--------------------------------------*/

/* Top Navigation Section */
.navbar {
    background-color: transparent;  
    padding-left: 10vw!important; 
    padding-right: 10vw!important;
  }

  #top-nav-bar{
    margin-bottom: 50px !important;
  }
  .nav-container{
    position: relative;
    padding-right: 0px !important;
    margin-bottom: 79px;
  }
  .navbar-toggler {
    border-color: transparent!important;
  }
  #top-nav-bar {
    z-index: 10000;
    padding-top: 16px;
    padding-bottom: 10px;
    margin-left: 10vw;
    margin-right: 10vw;
    min-width: 78vw;
  }
  #top-nav-bar .navbar-brand {
    margin-top: -16px;
    margin-left: 30px;
  }
  #top-nav-bar div ul li {
    padding: 0px 10px;
  }
  #top-nav-bar div a {
    border-bottom: 7px solid transparent;
    color: white!important;
  }
  #top-nav-bar div .main-nav-ui li > a {
    text-transform: uppercase;
    color: white!important;
  }
  #top-nav-bar div .main-nav-ui li > a:hover {
    transition: all 0.3s ease-out;
    box-shadow: 0 -1px 0 0 white inset, 0 -6px 0 0 white inset;
  }
  /*--------------------------------------*/

/* nav p a {
    text-decoration: none;
    color: white;
} */

#th-header-link:hover {
    text-decoration: none;
}

header {
    margin-top: 16px !important;
    margin-bottom: 14vh !important;
}

.th-logo {
    height: 30px;
    width: 30px;
}

#top-nav-bar div ul li {
    padding: 0px 30px;
  }

.tamuhack-logo {
    margin-top: 6px!important;
    min-width: 90px;
    width: 124px;
    height: 23px;
}

/****** TYPOGRAPHY ******/

h1 {
    font-size: 30px;
}

h2 {
    color: white;
    font-size: 22px;
    margin-bottom: 20px;
}
h3 {
    font-size: 24px;
    text-align: center;
}

/****** LEFT CONTAINER ******/

.hh-title {
    text-transform: uppercase;
    font-family: Questrial;
    font-size: 3.5vw;
    text-align: center;
    letter-spacing: 2px;
    margin-bottom: 20px;
    color: #354965;
}

.hh-subtitle {
    color: #354965;
}

/****** RIGHT CONTAINER ******/

.my-container {
    margin: 0 0 0 15vw;
    max-width: 55%;
}

#rect2 {
    display: none;
    width: 100%;
}

.hh-logo {
    max-width: 280px;
    margin-bottom: 40px;
}

.content-txt {
    margin-bottom: 40px; 
    color: white; 
    position:relative; 
    z-index: 10; 
    margin-top: 8%; 
    line-height: 44px; 
    font-family: Questrial, sans-serif;
}

#rect {
    position: absolute; 
    right: 0; 
    top: -240px; 
    z-index: -10;
    width: 100%; 
    height: 740px;
}

.apply-btn {
    background-color: #69A2CC; 
    color: white; 
    border-radius: 5px!important; 
    padding: 15px 20px; 
    font-size: 22px; 
    font-weight: 600;
    margin-top: 20px;
    margin-right: 20px;
    display: inline-block;
}

.apply-btn:hover {
    text-decoration: none;
    color: white;
    background-color: #346c94;
    transition: 0.3s;
}

.mentor-btn {
    color: white; 
    border-radius: 5px!important; 
    padding: 15px 20px; 
    font-size: 22px; 
    font-weight: 600;
    margin-top: 20px;
    display: inline-block;
    box-shadow: inset 0px 0px 0px 2px white;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
  }
.mentor-btn:hover {
    text-decoration: none;
    color: white;
    background-color: #69A2CC;
    transition: 0.3s;
}

#foot-container {
    padding-top: 250px;
}

#footer-bg {
    background-image:url(/static/assets/hh-assets/bottom-rectangle.svg);
    background-position: left bottom;
    background-repeat: no-repeat;
    background-size: contain;
}

/****** FORM ******/
.btn {
    background-color: #69A2CC; 
    border-color: #69A2CC; 
    color: white; 
    font-weight: bolder!important; 
    border-radius: 0px 5px 5px 0px; 
    padding: 0px 20px 0px 20px; 
    font-size: 18px; 
    width: 100%;
}
.btn:hover {
    cursor: pointer;
    background-color: #2F84C3;
    border-color: #2F84C3;
    transition: 0.3s;
}
.form-control {
    font-size: 18px; 
    border-radius: 5px 0 0 5px; 
    max-width: 300px;
    width: 60%;
}

.input-group {
    padding: 0;
    margin-bottom: 20px;
}


/***** SECTIONS *****/
h4 {
    font-family: "Roboto", "sans-serif";
    text-transform: uppercase;
    font-style: normal;
    font-weight: bold!important;
    font-size: 36px;
    line-height: 42px;
    letter-spacing: 0.01em;

    color: #212121;
}

p {
    font-family: "Questrial", "sans-serif";
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 28px;
    margin-top: 20px;

    color: #000000;
}

.section {
    overflow: hidden;
    margin: 20px 10vw 60px 10vw;
}

.section-left {
    width: 50%;
    padding-right: 5px;
    float: left;
}

.section-right {
    width: 50%;
    padding-left: 5px;
    float: right;
}

.section-text-left {
    width: 50%;
    padding-top: 40px;
    padding-right: 10%;
    float: left;
}

.section-text-right {
    width: 50%;
    padding-top: 40px;
    padding-left: 10%;
    float: right;
}

.section-graphic {
    max-width: 100%;
}

/*** Schedule ***/

.schedule-wrapper {
    background-color: #354965;
}

.schedule-graphic{
    width: 100%;
    background-color: #354965;
}

#schedule-content{
    margin-left: calc(10vw - 25px);
}

#schedule h4{
    color: white;
    margin: 0px;
}

#schedule-content .col-lg-6 .schedule-item:first-child p{
    font-size: 1.35rem;
    font-weight: 700 !important;
    margin-left: 3px;
}

.schedule-item{
    margin: 5px 0px;
    display: flex;
}

.schedule-item .fill{
    flex: 0 0 12px; 
    margin-right: 6px;
    height: 40px;
    margin-left: 5px;
}

.schedule-item .schedule-item-time{
    margin-left: 3px;
    margin-top: 5px;
    margin-bottom: 5px;
    flex: 0 0 150px;
}

.schedule-item .schedule-item-title{
    margin-top: 5px;
    margin-bottom: 5px;
}

.schedule-item .workshop{
    background-color: #3E678C;
}

.schedule-item .food{
    background-color: #8DBFEC;
}
/* ... */

